package soccerteam;

/**
 * Position enum.
 */
public enum Position {
  GOALIE, DEFENDER, MIDFIELDER, FORWARD
}
