classDiagram
    namespace Model {
    class Player {
        - firstName: String
        - lastName: String
        - dateOfBirth: Date
        - preferredPosition: Position
        - skillLevel: int
        - jerseyNumber: int
        + Player(firstName: String, lastName: String, dateOfBirth: Date, preferredPosition: Position, skillLevel: int)
        + getFirstName() String
        + setFirstName(firstName: String) void
        + getLastName() String
        + setLastName(lastName: String) void
        + getDateOfBirth() Date
        + setDateOfBirth(dateOfBirth: Date) void
        + getPreferredPosition() Position
        + setPreferredPosition(preferredPosition: Position) void
        + getSkillLevel() int
        + setSkillLevel(skillLevel: int) void
        + getJerseyNumber() int
        + setJerseyNumber(jerseyNumber: int) void
        + toString() String
    }
    class Team {
        - activePlayer: List~Player~
        - benchPlayer: List~Player~
        - players: List~Player~
        + Team(size:int, players: List~Player~)
        + addPlayer(player: Player) void
        + generateJerseyNumbers() void
        + selectStartingLineup() void
        + getPlayersList() String
        + getStartingLineup() String
    }
    class Position {
        <<enumeration>>
        GOALIE
        DENFENDER
        MIDFIELDER
        FORWARD
    }
    }
    namespace Controller {
    class SoccerTeamController {
        - Team team
        - SoccerTeamView view
        - GetTeamListener getTeamListener
        - GetStartLineListener getStartLineListener
        - TeamUpListener teamUpListener
        - AddPlayerListener addPlayerListener
        - List~Player~ candidatePlayers
        + SoccerTeamController(SoccerTeamView soccerTeamView)
    }
    }
    namespace View {
    class TeamInfoView {
        - JTextArea infoPanel
        - JPanel buttonPanel
        - JButton getTeamMembersButton
        - JButton getStartingLineUpButton
        + void onGetTeamMembersButtonClicked(ActionListener listener)
        + void onShowStartingLineUpButtonClicked(ActionListener listener)
        + void showInfo(String info)
    }
    class AddPlayerView {
        - JTextField firstNameField
        - JTextField lastNameField
        - JTextField dobField
        - JComboBox~Position~ positionSelector
        - JTextField skillLevelField
        - JButton addPlayerButton
        + Object[] getPlayer()
        + void clearFields()
        + void onAddPlayerButtonClicked(ActionListener listener)
    }
    class PlayerListView {
        - DefaultListModel<Player> playerListModel
        - JList~Object[]~ playerList
        - JScrollPane scrollPane
        - JButton teamUpButton
        + void addPlayer(Object[] player)
        + void onTeamUpButtonClicked(ActionListener listener)
        + List~Object[]~ getSelectedPlayers()
        + Player generateMockPlayer()
    }
    class SoccerTeamView {
        - AddPlayerView addPlayerView
        - PlayerListView playerListView
        - TeamInfoView teamInfoView
        + void displayError(String message)
        + void displayMessage(String message)
        + void onGetTeamMembersButtonClicked(ActionListener listener)
        + void onShowStartingLineUpButtonClicked(ActionListener listener)
        + void onTeamUpButtonClicked(ActionListener listener)
        + void onAddPlayerButtonClicked(ActionListener listener)
        + Object[] getPlayer()
        + void clearFields()
        + void addPlayer(Object[] p)
        + void showInfo(String info)
        + List~Object[]~ getSelectedPlayers()
    }
    }
    Player "1..*" --* "1" Team
    Player "1" *-- "0..1" Position
    SoccerTeamView "1" *-- "1" AddPlayerView
    SoccerTeamView "1" *-- "1" PlayerListView
    SoccerTeamView "1" *-- "1" TeamInfoView
    SoccerTeamController "1" *-- "1" SoccerTeamView
    SoccerTeamController "1" *-- "1" Team